fix: corregir el valor de min-height en index.css y eliminar overflow-x en app.module.css

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -6,7 +6,7 @@
   min-height: 100dvh;
   margin: 0 auto;
   color: #F5F5F5;
-  overflow-x: hidden;
+
 }
 
 .groupSvg {
