--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -5,5 +5,6 @@ body {
   display: flex;
   flex-direction: column;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100svh;
+  overflow-x: hidden;
 }
